<resources>
    <string name="app_name">Bunifu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_team">The Developers</string>
    <string name="action_support">Support the project</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search song</string>

    <string name="nav_arabic">Arabic</string>
    <string name="nav_english">English</string>

    <string name="victoria_name">Victoria Minapai</string>
    <string name="victoria_email">victoriamangu90@gmail.com</string>

    <string name="isaac_name">Isaac Mangu</string>
    <string name="isaac_email">isaacmangu1986@gmail.com</string>

    <string name="wenepai_name">Wenepai Elizai</string>
    <string name="wenepai_email">weneless1997@gmail.com</string>

    <string name="julius_name">Julius Paare</string>
    <string name="julius_email">juliuspaare@gmail.com</string>

    <string name="m_elisama_name">Mangu Elisama</string>
    <string name="m_elisama_email">eemangu@gmail.com</string>

    <string name="james_name">James Paare</string>
    <string name="james_email">jamespaare@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_app">Bunifu is your one stop shop for lyrics to your new never heard songs and popular hymns.
        \n\nIt is an ambitous project by smart,passionate refugees from Daadab Camps in Dagahaley, Garissa, Kenya.
        \n\nBe a part of this endeavour by donating money via MPESA to 0706691029 \'ISAAC MANGU\'.
        \n\nThank you!</string>
</resources>
